# aie-matrix

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tessl.json  tsconfig.base.json  tsconfig.json
.claude/skills/: adr-creator  adr-review  rfc-creator  rfc-review
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/skills/: tessl__colyseus-multiplayer
.github/workflows/: e2e.yml  proposal-branch-scope.yml  tmj-to-gram-parity-gallery.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
client/map-overlay/: package.json  tsconfig.json  vite.config.ts
client/phaser/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
clients/debugger/: README.md
clients/intermedium/: .env.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/: architecture.md  github-branch-ruleset-checklist.md  project-overview.md
docs/guides/: contributing-a-ghost-agent.md  (+2 more)
e2e/: README.md  dev-stack.mjs  global-setup.mjs  package.json  playwright.config.ts  probe.mjs
ghosts/: README.md
ghosts/python-client/: README.md  pyproject.toml
ghosts/python-client/src/aie_matrix_ghost_python_client/: __init__.py
scripts/: clean.mjs  demo.mjs  kill-poc-ports.mjs  register-ghost.mjs
server/: README.md  package.json  tsconfig.json
(+653 files in other folders)
